--- a/index.html
+++ b/index.html
@@ -510,6 +510,36 @@
             </div>
         </section>
 
+        <!-- License and Privacy -->
+        <section class="bg-[#F5F5F5]">
+            <div class="flex flex-col md:flex-row">
+                <div>
+                    <h2>
+                        Want new features sooner?
+                    </h2>
+                    <p>
+                        Get the Insiders build instead.
+                    </p>
+                </div>
+                <div>
+                    <h2>
+                        Use vscode.dev for quick edits online!
+                    </h2>
+                    <p>
+                        GitHub, Azure Repos, and local files.
+                    </p>
+                </div>
+            </div>
+            <div>
+                <h3>
+                    LICENSE AND PRIVACY TERMS
+                </h3>
+                <p>
+                    By downloading and using Visual Studio Code, you agree to the license terms and privacy statement. VS Code automatically sends telemetry data and crash dumps to help us improve the product. If you would prefer not to have this data sent please go see How to Disable Crash Reporting to learn how to disable it.
+                </p>
+            </div>
+            
+        </section>
         <!-- Education Purpose footer -->
         <!-- <footer>
             <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
