added hover for download buttons in download section

--- a/index.html
+++ b/index.html
@@ -431,21 +431,21 @@
                 <table class="my-[20px] text-[#FFFFFF] text-[12px] border-separate border-spacing-1">
                     <tr>
                         <th class="text-[#444444] text-[16px] font-medium">User Installer</th>
-                        <td class="bg-[#0066b8] rounded"><a href="">x64</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">x86</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">Arm64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x86</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm64</a></td>
                     </tr>
                     <tr>
                         <th class="text-[#444444] text-[16px] font-medium">System Installer</th>
-                        <td class="bg-[#0066b8] rounded"><a href="">x64</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">x86</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">Arm64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x86</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm64</a></td>
                     </tr>
                     <tr>
                         <th class="text-[#444444] text-[16px] font-medium">.zip</th>
-                        <td class="bg-[#0066b8] rounded"><a href="">x64</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">x86</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">Arm64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x86</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm64</a></td>
                     </tr>
                 </table>
             </div>
@@ -468,25 +468,25 @@
                 <table class="my-[20px] text-[#FFFFFF] text-[12px] border-separate border-spacing-1">
                     <tr>
                         <th class="text-[#444444] text-[16px] font-medium">.deb</th>
-                        <td class="bg-[#0066b8] rounded"><a href="">x64</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">Arm32</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">Arm64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm32</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm64</a></td>
                     </tr>
                     <tr>
                         <th class="text-[#444444] text-[16px] font-medium">.rpm</th>
-                        <td class="bg-[#0066b8] rounded"><a href="">x64</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">Arm32</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">Arm64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm32</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm64</a></td>
                     </tr>
                     <tr>
                         <th class="text-[#444444] text-[16px] font-medium">tar.gz</th>
-                        <td class="bg-[#0066b8] rounded"><a href="">x64</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">Arm32</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">Arm64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">x64</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm32</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Arm64</a></td>
                     </tr>
                     <tr>
                         <th class="text-[#444444] text-[16px] font-medium">Snap</th>
-                        <td colspan="2" class="bg-[#0066b8] rounded" class="bg-[#0066b8]"><a href="">Snap Store</a></td>
+                        <td colspan="2" class="bg-[#0066b8] rounded" class="bg-[#0066b8] hover:bg-[#005BA4]"><a href="">Snap Store</a></td>
                     </tr>
                 </table>
             </div>
@@ -502,9 +502,9 @@
                 <table class="my-[20px] text-[#FFFFFF] text-[12px] border-separate border-spacing-1">
                     <tr>
                         <th class="text-[#444444] text-[16px] font-medium">.zip</th>
-                        <td class="bg-[#0066b8] rounded"><a href="">Universal</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">Intel</a></td>
-                        <td class="bg-[#0066b8] rounded"><a href="">Apple silicon</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Universal</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Intel</a></td>
+                        <td class="bg-[#0066b8] hover:bg-[#005BA4] rounded"><a href="">Apple silicon</a></td>
                     </tr>
                 </table>
             </div>
