modified download section button captions

--- a/index.html
+++ b/index.html
@@ -456,13 +456,13 @@
                 <div class="flex flex-row">
                     <button class="mt-8 px-[35px] py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold mr-[2px]">
                         <img src="./assets/download.svg" alt="download" class="w-[18px] inline-block">
-                        Windows
-                        <p class="flex items-center text-[12px] ml-[5px]">Windows 8, 10, 11</p>
+                        .deb
+                        <p class="flex items-center text-[12px] ml-[5px]">Debian, Ubuntu</p>
                     </button>
                     <button class="mt-8 px-[35px] py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold ml-[2px]">
                         <img src="./assets/download.svg" alt="download" class="w-[18px] inline-block">
-                        Windows
-                        <p class="flex items-center text-[12px] ml-[5px]">Windows 8, 10, 11</p>
+                        .rpm
+                        <p class="flex items-center text-[12px] ml-[5px]">Red Hat, Fedora, SUSE</p>
                     </button>
                 </div>
                 <table class="my-[20px] text-[#FFFFFF] text-[12px] border-separate border-spacing-1">
@@ -496,8 +496,8 @@
                 <img src="./assets/apple-logo.svg" alt="windows" class="w-[90px]">
                 <button class="mt-8 px-[75px] py-[5px] bg-[#0066b8] hover:bg-[#005BA4] text-white text-[18px] leading-loose font-semibold">
                     <img src="./assets/download.svg" alt="download" class="w-[18px] inline-block">
-                    Windows
-                    <p class="flex items-center text-[12px] ml-[5px]">Windows 8, 10, 11</p>
+                    Mac
+                    <p class="flex items-center text-[12px] ml-[5px]">macOS 10.11+</p>
                 </button>
                 <table class="my-[20px] text-[#FFFFFF] text-[12px] border-separate border-spacing-1">
                     <tr>
