modified skeleton code for license section

--- a/index.html
+++ b/index.html
@@ -511,34 +511,35 @@
         </section>
 
         <!-- License and Privacy -->
-        <section class="bg-[#F5F5F5]">
-            <div class="flex flex-col md:flex-row">
-                <div>
-                    <h2>
-                        Want new features sooner?
-                    </h2>
-                    <p>
-                        Get the Insiders build instead.
-                    </p>
+        <section class="bg-[#F5F5F5] flex flex-col justify-center items-center py-[50px]">
+            <div class="flex flex-col text-[#444444]">
+                <div class="flex flex-col lg:flex-row justify-evenly items-center pb-[100px]">
+                    <div class="pb-[80px]">
+                        <h2 class="text-[18px] font-semibold">
+                            Want new features sooner?
+                        </h2>
+                        <p class="text-[15px] font-light text-center">
+                            Get the <a href="https://code.visualstudio.com/insiders/" class="text-[#0071bc] hover:underline underline-offset-1">Insiders build</a> instead.
+                        </p>
+                    </div>
+                    <div class="flex flex-col justify-evenly items-center">
+                        <h2 class="text-[20px] font-semibold w-[90%] text-center">
+                            Use <a href="https://code.visualstudio.com/insiders/" class="text-[#0071bc] hover:underline underline-offset-1">vscode.dev</a> for quick edits online!
+                        </h2>
+                        <p class="text-[15px] font-light text-center">
+                            GitHub, Azure Repos, and local files.
+                        </p>
+                    </div>
                 </div>
-                <div>
-                    <h2>
-                        Use vscode.dev for quick edits online!
-                    </h2>
-                    <p>
-                        GitHub, Azure Repos, and local files.
+                <div class="flex flex-col justify-evenly items-center">
+                    <h3>
+                        LICENSE AND PRIVACY TERMS
+                    </h3>
+                    <p class="w-[60%] md:w-[40%]">
+                        By downloading and using Visual Studio Code, you agree to the license terms and privacy statement. VS Code automatically sends telemetry data and crash dumps to help us improve the product. If you would prefer not to have this data sent please go see How to Disable Crash Reporting to learn how to disable it.
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
-                    LICENSE AND PRIVACY TERMS
-                </h3>
-                <p>
-                    By downloading and using Visual Studio Code, you agree to the license terms and privacy statement. VS Code automatically sends telemetry data and crash dumps to help us improve the product. If you would prefer not to have this data sent please go see How to Disable Crash Reporting to learn how to disable it.
-                </p>
-            </div>
-            
         </section>
         <!-- Education Purpose footer -->
         <!-- <footer>
