completed tailwind css code for license section

--- a/index.html
+++ b/index.html
@@ -511,32 +511,32 @@
         </section>
 
         <!-- License and Privacy -->
-        <section class="bg-[#F5F5F5] flex flex-col justify-center items-center py-[50px]">
+        <section class="bg-[#F5F5F5] flex flex-col justify-center items-center py-[50px] md:py-[30px] md:pb-[50px]">
             <div class="flex flex-col text-[#444444]">
-                <div class="flex flex-col lg:flex-row justify-evenly items-center pb-[100px]">
-                    <div class="pb-[80px]">
-                        <h2 class="text-[18px] font-semibold">
+                <div class="flex flex-col lg:flex-row justify-evenly items-center pb-[85px] md:pb-[60px]">
+                    <div class="pb-[80px] md:pb-[0px] md:leading-8">
+                        <h2 class="text-[18px] md:text-[21px] font-semibold">
                             Want new features sooner?
                         </h2>
-                        <p class="text-[15px] font-light text-center">
+                        <p class="text-[15px] md:text-[18px] font-light text-center">
                             Get the <a href="https://code.visualstudio.com/insiders/" class="text-[#0071bc] hover:underline underline-offset-1">Insiders build</a> instead.
                         </p>
                     </div>
-                    <div class="flex flex-col justify-evenly items-center">
-                        <h2 class="text-[20px] font-semibold w-[90%] text-center">
-                            Use <a href="https://code.visualstudio.com/insiders/" class="text-[#0071bc] hover:underline underline-offset-1">vscode.dev</a> for quick edits online!
+                    <div class="flex flex-col justify-evenly items-center md:leading-8 md:mt-[20px]">
+                        <h2 class="text-[20px] md:text-[21px] font-semibold w-[90%] text-center">
+                            Use <a href="https://vscode.dev/" target="_blank" class="text-[#0071bc] hover:underline underline-offset-1">vscode.dev</a> for quick edits online!
                         </h2>
-                        <p class="text-[15px] font-light text-center">
+                        <p class="text-[15px] md:-text[18px] font-light text-center">
                             GitHub, Azure Repos, and local files.
                         </p>
                     </div>
                 </div>
-                <div class="flex flex-col justify-evenly items-center">
-                    <h3>
+                <div class="flex flex-col justify-evenly items-center text-[#6c6c6c] leading-8">
+                    <h3 class="text-[11px] md:text-[12px] font-semibold">
                         LICENSE AND PRIVACY TERMS
                     </h3>
-                    <p class="w-[60%] md:w-[40%]">
-                        By downloading and using Visual Studio Code, you agree to the license terms and privacy statement. VS Code automatically sends telemetry data and crash dumps to help us improve the product. If you would prefer not to have this data sent please go see How to Disable Crash Reporting to learn how to disable it.
+                    <p class="w-[55%] md:w-[45%] text-[12px] md:text-[14px] text-center">
+                        By downloading and using Visual Studio Code, you agree to the <a href="https://code.visualstudio.com/License/" class="text-[#0071bc] hover:underline underline-offset-1">license terms</a> and <a href="https://privacy.microsoft.com/en-ca/privacystatement" class="text-[#0071bc] hover:underline underline-offset-1">privacy statement</a>. VS Code automatically sends telemetry data and crash dumps to help us improve the product. If you would prefer not to have this data sent please go see <a href="https://code.visualstudio.com/docs/supporting/FAQ#_how-to-disable-crash-reporting" class="text-[#0071bc] hover:underline underline-offset-1">How to Disable Crash Reporting</a> to learn how to disable it.
                     </p>
                 </div>
             </div>
