added skeleton code for footer section

--- a/index.html
+++ b/index.html
@@ -541,6 +541,49 @@
                 </div>
             </div>
         </section>
+
+        <!-- Footer section -->
+        <section>
+            <div>
+                <div>
+                    <ul>
+                        <li>
+                            <span>
+                                Hello from Seattle.
+                            </span>
+                        </li>
+                        <li>
+                            <a href="">
+                                Follow @code
+                            </a>
+                        </li>
+                        <li>
+                            <img src="./assets/github-icon.svg" alt="github-icon">Star
+                        </li>
+                        <li>
+                            <a href="">
+                                139,901
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>Support</li>
+                        <li>Privacy</li>
+                        <li>Terms of Use</li>
+                        <li>License</li>
+                    </ul>
+                </div>
+                <div>
+                    <a href="">
+                        <img src="./assets/microsoft-logo.png" alt="microsoft">
+                    </a>
+                    <span>© 2022 Microsoft</span>
+                </div>
+            </div>
+        </section>
+
         <!-- Education Purpose footer -->
         <!-- <footer>
             <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
