educational purpose footer

--- a/index.html
+++ b/index.html
@@ -592,13 +592,13 @@
         </section>
 
         <!-- Education Purpose footer -->
-        <!-- <footer>
-            <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-xl">
+        <footer>
+            <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-lg">
                 <p>
                     Created for <span class="font-bold">Educational</span> and <span class="font-bold">Learning</span> purpose only.
                 </p>
             </section>
-        </footer> -->
+        </footer>
     </main>
 </body>
 </html>
