completed taiwind code for footer section for larger screens

--- a/index.html
+++ b/index.html
@@ -544,9 +544,9 @@
 
         <!-- Footer section -->
         <section class="bg-[#333333]">
-            <div class="flex flex-col text-[#ffffff] pb-[70px]">
-                <div class="flex flex-row justify-evenly items-center w-[65%] py-[30px]">
-                    <ul class="flex flex-row justify-between text-[14px]">
+            <div class="flex flex-col md:flex-row text-[#ffffff] pb-[70px]">
+                <div class="flex flex-row justify-evenly md:justify-start items-center w-[65%] md:w-[60%] py-[30px] md:px-[200px]">
+                    <ul class="flex flex-row justify-between text-[14px] md:gap-x-[25px] md:mr-[20px]">
                         <li>
                             <span class="hidden md:block">
                                 Hello from Seattle.
@@ -559,20 +559,20 @@
                         </li>
                     </ul>
                     <ul class="flex flex-row justify-between font-semibold">
-                        <li class="flex flex-row text-[11px] py-[1px] px-[5px] bg-[#ffffff] text-[#333333] mr-[2px] rounded">
+                        <li class="flex flex-row text-[11px] py-[2px] px-[6px] bg-[#ffffff] text-[#333333] mr-[2px] rounded">
                             <a href="">
                                 <img src="./assets/github-icon.svg" alt="github-icon" class="h-[14px] mt-[1px]">
                             </a>
                             <a href=""><span class="px-[2px]">Star</span></a>
                         </li>
-                        <li class="text-[11px] py-[1px] px-[7px] bg-[#ffffff] text-[#000000] ml-[2px] rounded hover:text-[#0071bc]">
+                        <li class="text-[11px] py-[2px] px-[8px] bg-[#ffffff] text-[#000000] ml-[2px] rounded hover:text-[#0071bc]">
                             <a href="">
                                 139,901
                             </a>
                         </li>
                     </ul>
                 </div>
-                <div class="flex flex-row gap-x-[38px] text-[12px]">
+                <div class="flex flex-row gap-x-[38px] text-[12px] md:w-[40%] md:mt-[20px] md:ml-[30px]">
                     <div>
                         <ul class="flex flex-row gap-x-[25px] ml-[15px]">
                             <li>Support</li>
@@ -593,7 +593,7 @@
 
         <!-- Education Purpose footer -->
         <footer>
-            <section class="bg-[#2C2C32] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-lg">
+            <section class="bg-[#25252B] items-center fixed bottom-0 z-10 text-white w-full text-center p-2 text-lg">
                 <p>
                     Created for <span class="font-bold">Educational</span> and <span class="font-bold">Learning</span> purpose only.
                 </p>
