--- a/index.html
+++ b/index.html
@@ -544,8 +544,8 @@
 
         <!-- Footer section -->
         <section class="bg-[#333333]">
-            <div class="flex flex-col md:flex-row text-[#ffffff] pb-[70px]">
-                <div class="flex flex-row justify-evenly md:justify-start items-center w-[65%] md:w-[60%] py-[30px] md:px-[200px]">
+            <div class="flex flex-col lg:flex-row text-[#ffffff] pb-[70px]">
+                <div class="flex flex-row justify-evenly lg:justify-start items-center w-[65%] lg:w-[60%] py-[30px] lg:px-[200px]">
                     <ul class="flex flex-row justify-between text-[14px] md:gap-x-[25px] md:mr-[20px]">
                         <li>
                             <span class="hidden md:block">
@@ -572,7 +572,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="flex flex-row gap-x-[38px] text-[12px] md:w-[40%] md:mt-[20px] md:ml-[30px]">
+                <div class="flex flex-row gap-x-[38px] text-[12px] lg:w-[40%] lg:mt-[20px] lg:ml-[30px]">
                     <div>
                         <ul class="flex flex-row gap-x-[25px] ml-[15px]">
                             <li>Support</li>
