--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
         <!-- Debugging feature Section -->
         <section class="bg-[#F5F5F5] py-[20px]">
-            <section class="bg-[#F5F5F5] flex flex-col-reverse md:flex-row lg:w-[80%] my-[60px] lg:mx-[170px] md:mr-[-80px]">
+            <section class="bg-[#F5F5F5] flex flex-col-reverse md:flex-row lg:w-[80%] my-[60px] lg:mx-[170px]">
                 <div class="md:w-[65%] mx-[20px] lg:mr-[150px] md:mt-[-20px] lg:mt-[0px] md:mr-[50px]">
                     <h2 class="text-[18px] mt-[10px] mb-[30px] lg:text-[30px] lg:mt-[-10px] md:text-[27px] font-extralight">
                         Print statement debugging is a thing of the past.
@@ -291,7 +291,7 @@
                     <p class="text-[16px] leading-8 lg:text-[18px] md:text-[15.5px] font-light">Debug code right from the editor. Launch or attach to your running apps and debug with break points, call stacks, and an interactive console.
                     </p>
                 </div>
-                <div class="md:w-[35%] ml-[100px] lg:mr-[130px]">
+                <div class="md:w-[35%] ml-[100px] lg:mr-[130px] md:mr-[30px]">
                     <img src="./assets/home-debug.svg" alt="Debug" class="w-[80%] md:w-[100%]">
                 </div>
             </section>
@@ -313,7 +313,7 @@
 
         <!-- Extension feature Section -->
         <section class="bg-[#F5F5F5] py-[20px]">
-            <section class="bg-[#F5F5F5] flex flex-col-reverse md:flex-row lg:w-[80%] my-[60px] lg:mx-[170px] md:mr-[-80px]">
+            <section class="bg-[#F5F5F5] flex flex-col-reverse md:flex-row lg:w-[80%] my-[60px] lg:mx-[170px]">
                 <div class="md:w-[65%] mx-[20px] lg:mr-[150px] md:mt-[-20px] lg:mt-[0px] md:mr-[50px]">
                     <h2 class="text-[18px] mt-[10px] mb-[30px] lg:text-[30px] lg:mt-[-10px] md:text-[27px] font-extralight">
                         Extensible and customizable.
@@ -321,7 +321,7 @@
                     <p class="text-[16px] leading-8 lg:text-[18px] md:text-[15.5px] font-light">Want even more features? Install extensions to add new languages, themes, debuggers, and to connect to additional services. Extensions run in separate processes, ensuring they won't slow down your editor. <a href="https://code.visualstudio.com/docs/editor/extension-marketplace" class="text-[#0071bc]">Learn more about extensions.</a>
                     </p>
                 </div>
-                <div class="md:w-[35%] ml-[100px] lg:mr-[130px]">
+                <div class="md:w-[35%] ml-[100px] lg:mr-[130px] md:mr-[30px]">
                     <img src="./assets/Hundreds-of-Extensions.png" alt="Extension" class="w-[80%] md:w-[100%]">
                 </div>
             </section>
@@ -346,9 +346,9 @@
             <p class="text-[19px] text-[#444444] md:text-[30px] text-center font-extralight pb-[30px]">
                 VS Code for
             </p>
-            <div class="bg-[#f5f5f5] px-4 flex flex-row md:flex-col md:items-center md:flex-wrap">
+            <div class="bg-[#f5f5f5] flex flex-row md:flex-col md:items-center">
                 <!-- <div class="flex flex-col md:flex-row justify-evenly w-[70%] md:mx-[220px] gap-[20px] md:py-[20px]"> -->
-                <div class="flex flex-col w-[70%] md:grid md:grid-col md:grid-cols-6 md:gap-6 md:mx-[220px] gap-[20px] md:py-[20px]">
+                <div class="flex flex-col w-[70%] md:w-[90%] lg:w-[70%] md:grid md:grid-col md:grid-cols-6 md:gap-6 md:mx-[220px] gap-[20px] md:py-[20px]">
                     <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
                         <img src="./assets/javascript.svg" alt="Javascript" class="w-[30px]">
                         JavaScript
@@ -376,7 +376,7 @@
                 </div>
         
                 <!-- <div class="flex flex-col md:flex-row w-[70%] md:mx-[220px] gap-[20px] justify-evenly"> -->
-                <div class="flex flex-col w-[70%] md:grid md:grid-col md:grid-cols-6 md:gap-6 md:mx-[220px] gap-[20px]">
+                <div class="flex flex-col w-[70%] md:w-[90%] lg:w-[70%] md:grid md:grid-col md:grid-cols-6 md:gap-6 md:mx-[220px] gap-[20px]">
                     <p class="flex flex-row text-[15px] md:text-[18px] font-[350]">
                         <img src="./assets/json.svg" alt="JSON" class="w-[30px]">
                         JSON
